--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
             <div class="header_balloon">
                 <ul class="header_contacts">
                     <li class="header_contacts-item link">
-                            <button class="header_contacts-button" id="callBtn">
-                                <svg class="header_contacts-icon">
-                                    <use href="/images/index/svg/symbol-defs.svg#icon-phone"></use>
-                                </svg>
-                            </button>
+                        <button class="header_contacts-button" id="callBtn">
+                            <svg class="header_contacts-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-phone"></use>
+                            </svg>
+                        </button>
                     </li>
                     <li class="header_contacts-item link">
-                            <p class="header_contacts-number--first">+38 095 714 33 50</p>
+                        <p class="header_contacts-number--first">+38 095 714 33 50</p>
                     </li>
                     <li class="header_contacts-item link">
                         <p class="header_contacts-number--second">+38 066 389 34 33</p>                    
@@ -284,40 +284,15 @@
 
                 <!-- Block 5 -->
                 <h3 class="products__title products__title--type5">Оформлення кульками</h3>
-                <!-- <div class="products__photo-container">
-                    <figure class="products__photo-wrapper">
+                <div class="products__photo-container">
+                    <!-- <figure class="products__photo-wrapper">
                         <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
                         <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
                         <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
                         <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
                         <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
-                    </figure> 
-                </div> -->
-
-                <!-- <div class="products__photo-container">
-                    <div class="products__photo-slider">
-                        <div class="products__photo-wrapper">
-                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo1">
-                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo2">
-                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo3">
-                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo4">
-                            <img class="products__photo-wrapper_item" src="/images/index/jpg/card2.jpg" alt="" width="304px" id="photo5">
-                        </div>
-                    </div>
-                </div> -->
-
-                <div class="slider-container">
-                    <div class="slider">
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 1" loading="lazy"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 2" loading="lazy"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 3" loading="lazy"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 4" loading="lazy"></div>
-                        <div class="slide"><img src="/images/index/jpg/card2.jpg" alt="Slide 5" loading="lazy"></div>
-                    </div>
-                    <button class="prev">Previous</button>
-                    <button class="next">Next</button>
+                    </figure>  -->
                 </div>
-
 
                 <div class="products__photo-wrapper_textblock">
                     <p class="products__photo-wrapper_text">Оформлення кульками - чудовий спосіб залучити потенційних клієнтів під час відкриття чи проведення рекламних компаній.</p>
@@ -337,14 +312,14 @@
 
                 <ul class="about__list link">
                     <li class="about__list-item about__item--1">
-                        <div class="about__item-area about__area--1">
+                        <div class="about__item-area color__grey">
                             <p class="about__item-text">Гелієві кульки та товари для свята завжди були близькими нашому серцю.</p>
                             <p class="about__item-text">Бачити щирі посмішки на обличчі людей, створювати для них гарний настрій та залишати приємні враження від своєї роботи - мрія кожної людини.</p>
                         </div>    
                     </li>
 
                     <li class="about__list-item about__item--2">
-                        <div class="about__item-area about__area--2">
+                        <div class="about__item-area color__rose">
                             <p class="about__item-text">В якійсь мірі, створення композицій з повітряних кульок - це творчий процес.</p>
                             <p class="about__item-text">Саме тому, ми розпочали свою діяльність ще на початку 2011 року.</p>
                             <p class="about__item-text">Йшли роки, були зміни локацій, проходив творчий розвиток, здобувався відповідний досвід.</p>
@@ -355,7 +330,7 @@
 
 
                     <li class="about__list-item about__item--3">
-                        <div class="about__item-area about__area--3">
+                        <div class="about__item-area color__blue">
                             <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь.</p>
                             <p class="about__item-text">Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
                         </div>
@@ -364,7 +339,7 @@
                     <img class="about__mob-image about__mob-image-bottom"src="/images/index/jpg/about_mob-bottom.jpg" alt="Фото магазину гелієвих кульок у Луцьку" loading="lazy">
 
                     <li class="about__list-item about__item--4">
-                        <div class="about__item-area about__area--4">
+                        <div class="about__item-area about__area-special color__orange">
                             <ul>
                                 <li><p class="about__item-text">фольговані фігури для дітей;</p></li>
                                 <li><p class="about__item-text">латексні кульки в асортименті;</p></li>
@@ -383,10 +358,82 @@
             </div>
         </section>
 
+        <!-- WHY SECTION -->
+        <section class="why-section container">
+            <div class="why section-narrow">
+                <div class="caption">
+                    <h2 class="caption_text">Про нас</h2>                    
+                </div>
+
+                <ul class="why__list link">                    
+                    <li class="why__list-item">
+                        <div class="why__icon-area area__top-right">
+                            <svg class="why__icon">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-location"></use>
+                            </svg>
+                        </div>
+                        <p class="why__item-text area__bottom-left">Зручна локація в центрі міста: зручно припаркувати авто, або ж доїхати до нас громадським транспортом</p>
+                    </li>
+
+                    <li class="why__list-item">
+                        <div class="why__icon-area area__top-left">
+                            <svg class="why__icon">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-like"></use>
+                            </svg>
+                        </div>
+                        <p class="why__item-text area__bottom-right">Найбільший вибір гелієвих та повітряних кульок, а також товарів для свята у Луцьку</p>
+                    </li>
+                </ul>
+                
+                <ul class="why__list link">
+                    <li class="why__list-item">
+                        <div class="why__icon-area area__bottom-right">
+                            <svg class="why__icon">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-cart"></use>
+                            </svg>
+                        </div>
+                        <p class="why__item-text area__top-left">Одразу два магазини для зручності на ваш вибір: обирайте саме той, який вам більше до вподоби</p>
+                    </li>
+
+                    <li class="why__list-item">
+                        <div class="why__icon-area area__bottom-left">
+                            <svg class="why__icon">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-clock"></use>
+                            </svg>
+                        </div>
+                        <p class="why__item-text area__top-right">Завдяки спеціальній обробці, ми продовжуємо час польоту кульки з 8 годин до 48 та більше</p>
+                    </li>
+                </ul>
+
+                <img src="" alt="">
+
+                <ul class="link">
+                    <li>
+                        <img src="" alt="">
+                    </li>
+
+                    <li>
+                        <img src="" alt="">
+                    </li>
+
+                    <li>
+                        <img src="" alt="">
+                    </li>
+                </ul>
+
+            </div>
+        </section>
+
+        <section class="container" style="outline: 1px solid black; height: 100px;">
+            <div class="section-narrow">
+
+            </div>
+        </section>
+
     </main>
     
     <script src="/js/carousel.js"></script>
     <script src="/js/call.js"></script>
-    <script src="/js/photo-wrapper.js"></script>
+    <script src="/js/slider.js"></script>
 </body>
 </html>
