--- a/index.html
+++ b/index.html
@@ -312,14 +312,14 @@
 
                 <ul class="about__list link">
                     <li class="about__list-item about__item--1">
-                        <div class="about__item-area color__grey">
+                        <div class="about__item-area background__grey">
                             <p class="about__item-text">Гелієві кульки та товари для свята завжди були близькими нашому серцю.</p>
                             <p class="about__item-text">Бачити щирі посмішки на обличчі людей, створювати для них гарний настрій та залишати приємні враження від своєї роботи - мрія кожної людини.</p>
                         </div>    
                     </li>
 
                     <li class="about__list-item about__item--2">
-                        <div class="about__item-area color__rose">
+                        <div class="about__item-area background__rose">
                             <p class="about__item-text">В якійсь мірі, створення композицій з повітряних кульок - це творчий процес.</p>
                             <p class="about__item-text">Саме тому, ми розпочали свою діяльність ще на початку 2011 року.</p>
                             <p class="about__item-text">Йшли роки, були зміни локацій, проходив творчий розвиток, здобувався відповідний досвід.</p>
@@ -330,7 +330,7 @@
 
 
                     <li class="about__list-item about__item--3">
-                        <div class="about__item-area color__blue">
+                        <div class="about__item-area background__blue">
                             <p class="about__item-text">З часом наш магазин став відомим широкому колу лучан. Нас завжди з великою радістю відвідують діти та молодь.</p>
                             <p class="about__item-text">Окрім надування гелієвих кульок, створення з них композицій для фотозон, у нас ви також можете знайти різноманітні товари для свята.</p>
                         </div>
@@ -339,7 +339,7 @@
                     <img class="about__mob-image about__mob-image-bottom"src="/images/index/jpg/about_mob-bottom.jpg" alt="Фото магазину гелієвих кульок у Луцьку" loading="lazy">
 
                     <li class="about__list-item about__item--4">
-                        <div class="about__item-area about__area-special color__orange">
+                        <div class="about__item-area about__area-special background__orange">
                             <ul>
                                 <li><p class="about__item-text">фольговані фігури для дітей;</p></li>
                                 <li><p class="about__item-text">латексні кульки в асортименті;</p></li>
@@ -367,7 +367,7 @@
 
                 <ul class="why__list link">                    
                     <li class="why__list-item">
-                        <div class="why__icon-area area__top-right">
+                        <div class="why__icon-area area__top-right background__blue">
                             <svg class="why__icon">
                             <use href="/images/index/svg/symbol-defs.svg#icon-location"></use>
                             </svg>
@@ -376,36 +376,36 @@
                     </li>
 
                     <li class="why__list-item">
-                        <div class="why__icon-area area__top-left">
+                        <div class="why__icon-area area__top-left background__rose">
                             <svg class="why__icon">
                             <use href="/images/index/svg/symbol-defs.svg#icon-like"></use>
                             </svg>
                         </div>
-                        <p class="why__item-text area__bottom-right">Найбільший вибір гелієвих та повітряних кульок, а також товарів для свята у Луцьку</p>
+                        <p class="why__item-text area__bottom-right why__item-text--2">Найбільший вибір гелієвих та повітряних кульок, а також товарів для свята у Луцьку</p>
                     </li>
                 </ul>
                 
                 <ul class="why__list link">
                     <li class="why__list-item">
-                        <div class="why__icon-area area__bottom-right">
+                        <div class="why__icon-area area__bottom-right background__orange">
                             <svg class="why__icon">
                             <use href="/images/index/svg/symbol-defs.svg#icon-cart"></use>
                             </svg>
                         </div>
-                        <p class="why__item-text area__top-left">Одразу два магазини для зручності на ваш вибір: обирайте саме той, який вам більше до вподоби</p>
+                        <p class="why__item-text area__top-left why__item-text--3">Одразу два магазини для зручності на ваш вибір: обирайте саме той, який вам більше до вподоби</p>
                     </li>
 
                     <li class="why__list-item">
-                        <div class="why__icon-area area__bottom-left">
+                        <div class="why__icon-area area__bottom-left background__grey">
                             <svg class="why__icon">
                             <use href="/images/index/svg/symbol-defs.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <p class="why__item-text area__top-right">Завдяки спеціальній обробці, ми продовжуємо час польоту кульки з 8 годин до 48 та більше</p>
+                        <p class="why__item-text area__top-right why__item-text--4">Завдяки спеціальній обробці, ми продовжуємо час польоту кульки з 8 годин до 48 та більше</p>
                     </li>
                 </ul>
 
-                <img src="" alt="">
+                <div class="why__central-image"></div>
 
                 <ul class="link">
                     <li>
