--- a/index.html
+++ b/index.html
@@ -365,14 +365,14 @@
                     <h2 class="caption_text">Про нас</h2>                    
                 </div>
 
-                <ul class="why__list link">                    
-                    <li class="why__list-item">
+                <ul class="why__list why__list--first link">                    
+                    <li class="why__list-item why__list-item--margin">
                         <div class="why__icon-area area__top-right background__blue">
                             <svg class="why__icon">
                             <use href="/images/index/svg/symbol-defs.svg#icon-location"></use>
                             </svg>
                         </div>
-                        <p class="why__item-text area__bottom-left">Зручна локація в центрі міста: зручно припаркувати авто, або ж доїхати до нас громадським транспортом</p>
+                        <p class="why__item-text area__bottom-left why__item-text--1">Зручна локація в центрі міста: зручно припаркувати авто, або ж доїхати до нас громадським транспортом</p>
                     </li>
 
                     <li class="why__list-item">
@@ -407,18 +407,26 @@
 
                 <div class="why__central-image"></div>
 
-                <ul class="link">
-                    <li>
-                        <img src="" alt="">
+                <ul class="why__image-list link">
+                    <li class="why__image-item">
+                        <picture>
+                            <img class="why__image why__image--left" src="/images/index/jpg/why_left-image_tab.jpg" alt="">
+                        </picture>
+                    </li>
+                    <li class="why__image-item">
+                        <picture>
+                            <img class="why__image why__image--bottom" src="/images/index/jpg/why_bottom-image_tab.jpg" alt="">
+                        </picture>
                     </li>
 
-                    <li>
-                        <img src="" alt="">
+
+                    <li class="why__image-item">
+                        <picture>
+                            <img class="why__image why__image--right" src="/images/index/jpg/why_right-image_tab.jpg" alt="">
+                        </picture>
                     </li>
 
-                    <li>
-                        <img src="" alt="">
-                    </li>
+
                 </ul>
 
             </div>
