--- a/index.html
+++ b/index.html
@@ -453,19 +453,40 @@
             </div>
         </section>
 
-        <section class="container">
-            <div class="section-narrow">
+        <!-- PHOTO GALLERY SECTION -->
+        <section class="photo-gallery__section container">
+            <div class="photo-gallery section-wide">
+                <div class="photo-gallery__caption caption">
+                    <h2 class="caption_text">Про нас</h2>                    
+                </div>
+
+                <div class="photo-gallery__clouds"></div>
+
+                <ul class="photo-gallery__list link">
+                    <li class="photo-gallery__item photo-gallery__item--1">
+                        <!-- <div class="photo-gallery__clouds__item--1"></div> -->
+                    </li>
+                    <li class="photo-gallery__item photo-gallery__item--2">
+                        <!-- <div class="photo-gallery__clouds__item--2"></div> -->
+                    </li>
+                </ul>
 
             </div>
         </section>
 
 
+
+
+
+
+
+
+
         <section class="container" style="outline: 1px solid black; height: 100px;">
             <div class="section-narrow">
-                 <div class="caption">
-                    <h2 class="caption_text">Про нас</h2>                    
+                <div class="caption">
+                    <h2 class="caption_text"></h2>                    
                 </div>
-
             </div>
         </section>
 
