--- a/index.html
+++ b/index.html
@@ -463,12 +463,29 @@
                 <div class="photo-gallery__clouds"></div>
 
                 <ul class="photo-gallery__list link">
-                    <li class="photo-gallery__item photo-gallery__item--1">
-                        <!-- <div class="photo-gallery__clouds__item--1"></div> -->
-                    </li>
-                    <li class="photo-gallery__item photo-gallery__item--2">
-                        <!-- <div class="photo-gallery__clouds__item--2"></div> -->
-                    </li>
+                    <li class="photo-gallery__item photo-gallery__item--1"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--2"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--3"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--4"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--5"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--6"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--7"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--8"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--9"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--10"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--11"></li>
+
+                    <li class="photo-gallery__item photo-gallery__item--12"></li>
                 </ul>
 
             </div>
