Gallery section animation

--- a/index.html
+++ b/index.html
@@ -460,49 +460,45 @@
                     <h2 class="caption_text">Про нас</h2>                    
                 </div>
 
-                <div class="photo-gallery__clouds"></div>
+                <div class="photo-gallery__clouds">
+                    <!-- <ul class="photo-gallery__list link">
+                        <li class="photo-gallery__item photo-gallery__item--1"></li>
 
-                <ul class="photo-gallery__list link">
-                    <li class="photo-gallery__item photo-gallery__item--1"></li>
+                        <li class="photo-gallery__item photo-gallery__item--2"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--2"></li>
+                        <li class="photo-gallery__item photo-gallery__item--3"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--3"></li>
+                        <li class="photo-gallery__item photo-gallery__item--4"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--4"></li>
+                        <li class="photo-gallery__item photo-gallery__item--5"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--5"></li>
+                        <li class="photo-gallery__item photo-gallery__item--6"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--6"></li>
+                        <li class="photo-gallery__item photo-gallery__item--7"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--7"></li>
+                        <li class="photo-gallery__item photo-gallery__item--8"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--8"></li>
+                        <li class="photo-gallery__item photo-gallery__item--9"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--9"></li>
+                        <li class="photo-gallery__item photo-gallery__item--10"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--10"></li>
+                        <li class="photo-gallery__item photo-gallery__item--11"></li>
 
-                    <li class="photo-gallery__item photo-gallery__item--11"></li>
+                        <li class="photo-gallery__item photo-gallery__item--12"></li>
+                    </ul> -->
+                </div>
 
-                    <li class="photo-gallery__item photo-gallery__item--12"></li>
-                </ul>
+                <div class="photo-gallery__balloons"></div>
 
             </div>
         </section>
 
 
 
-
-
-
-
-
-
-        <section class="container" style="outline: 1px solid black; height: 100px;">
+        <section class="container" style="outline: 1px solid black; height: 200px;">
             <div class="section-narrow">
                 <div class="caption">
-                    <h2 class="caption_text"></h2>                    
+                    <h2 class="caption_text">ffjhjf</h2>                    
                 </div>
             </div>
         </section>
