Gallery section finish

--- a/index.html
+++ b/index.html
@@ -457,38 +457,10 @@
         <section class="photo-gallery__section container">
             <div class="photo-gallery section-wide">
                 <div class="photo-gallery__caption caption">
-                    <h2 class="caption_text">Про нас</h2>                    
+                    <h2 class="caption_text">Наші роботи</h2>                    
                 </div>
 
-                <div class="photo-gallery__clouds">
-                    <!-- <ul class="photo-gallery__list link">
-                        <li class="photo-gallery__item photo-gallery__item--1"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--2"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--3"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--4"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--5"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--6"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--7"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--8"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--9"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--10"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--11"></li>
-
-                        <li class="photo-gallery__item photo-gallery__item--12"></li>
-                    </ul> -->
-                </div>
-
-                <!-- <div class="photo-gallery__balloons"></div>  -->
+                <div class="photo-gallery__clouds"></div>
 
                 <picture class="photo-gallery__balloons">
                     <source srcset="/images/index/webp/gallery_balloons_mac.webp 1x, /images/index/webp/gallery_balloons_mac@2x.webp 2x" media="(min-width: 1728px)" type="image/webp">   
@@ -505,7 +477,6 @@
 
                     <img src="/images/index/png/gallery_balloons_mob.png" alt="Гелієві кульки" loading="lazy">
                 </picture>
-
             </div>
         </section>
 
