--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <li class="why__list-item why__list-item--margin">
                         <div class="why__icon-area area__top-right background__blue">
                             <svg class="why__icon">
-                            <use href="/images/index/svg/symbol-defs.svg#icon-location"></use>
+                                <use href="/images/index/svg/symbol-defs.svg#icon-location"></use>
                             </svg>
                         </div>
                         <p class="why__item-text area__bottom-left why__item-text--1">Зручна локація в центрі міста: зручно припаркувати авто, або ж доїхати до нас громадським транспортом</p>
@@ -378,7 +378,7 @@
                     <li class="why__list-item">
                         <div class="why__icon-area area__top-left background__rose">
                             <svg class="why__icon">
-                            <use href="/images/index/svg/symbol-defs.svg#icon-like"></use>
+                                <use href="/images/index/svg/symbol-defs.svg#icon-like"></use>
                             </svg>
                         </div>
                         <p class="why__item-text area__bottom-right why__item-text--2">Найбільший вибір гелієвих та повітряних кульок, а також товарів для свята у Луцьку</p>
@@ -389,7 +389,7 @@
                     <li class="why__list-item">
                         <div class="why__icon-area area__bottom-right background__orange">
                             <svg class="why__icon">
-                            <use href="/images/index/svg/symbol-defs.svg#icon-cart"></use>
+                                <use href="/images/index/svg/symbol-defs.svg#icon-cart"></use>
                             </svg>
                         </div>
                         <p class="why__item-text area__top-left why__item-text--3">Одразу два магазини для зручності на ваш вибір: обирайте саме той, який вам більше до вподоби</p>
@@ -398,7 +398,7 @@
                     <li class="why__list-item">
                         <div class="why__icon-area area__bottom-left background__grey">
                             <svg class="why__icon">
-                            <use href="/images/index/svg/symbol-defs.svg#icon-alarm"></use>
+                                <use href="/images/index/svg/symbol-defs.svg#icon-alarm"></use>
                             </svg>
                         </div>
                         <p class="why__item-text area__top-right why__item-text--4">Завдяки спеціальній обробці, ми продовжуємо час польоту кульки з 8 годин до 48 та більше</p>
@@ -480,8 +480,98 @@
             </div>
         </section>
 
+        <!-- FAQ SECTION -->
+        <section class="faq-section container">
+            <div class="faq section-narrow">
+                <div class="caption">
+                    <h2 class="caption_text">FAQ</h2>                    
+                </div>
+
+                <div class="faq__arrows-section">
+                    <div>
+                        <svg class="faq__arrows-block faq__arrows-block--start">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-start"></use>
+                        </svg>
+                    </div>
+
+                    <h3 class="faq__arrows-caption">Як замовити у нас кульки онлайн?</h3>
+
+                    <ul class="faq__arrows-list link">
+                        <li class="faq__arrows-item">
+                            <svg class="faq__arrows-icon--mob">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
+                            </svg>
+
+                            <svg class="faq__arrows-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
+                            </svg>
+
+                            <p class="faq__arrows-text">зателефонувати до нас або написати нам на e-mail</p>
+                        </li>
+
+                        <li class="faq__arrows-item">
+                            <svg class="faq__arrows-icon--mob">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow2"></use>
+                            </svg>
+
+                            <svg class="faq__arrows-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-arrow2"></use>
+                            </svg>
+
+                            <p class="faq__arrows-text">прислати фото на Viber, у Telegram, або ж Instagram</p>
+                        </li>
+
+                        <li class="faq__arrows-item">
+                             <svg class="faq__arrows-icon--mob">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
+                            </svg>
+
+                            <svg class="faq__arrows-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
+                            </svg>
+
+                            <p class="faq__arrows-text">замовити композицію на певний день та час</p>
+                        </li>
+
+                        <li class="faq__arrows-item">
+                             <svg class="faq__arrows-icon--mob">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow2"></use>
+                            </svg>
+
+                            <svg class="faq__arrows-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-arrow2"></use>
+                            </svg>
+
+                            <p class="faq__arrows-text faq__arrows-text--4">оплатити кульки онлайн</p>
+                        </li>
+
+                        <li class="faq__arrows-item">
+                             <svg class="faq__arrows-icon--mob">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
+                            </svg>
+
+                            <svg class="faq__arrows-icon">
+                                <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
+                            </svg>
+
+                            <p class="faq__arrows-text">приїхати за вже надутими кульками у визначений час</p>
+                        </li>
+                    </ul>
+
+                    <div>
+                        <svg class="faq__arrows-block faq__arrows-block--finish">
+                            <use href="/images/index/svg/symbol-defs.svg#icon-finish"></use>
+                        </svg>
+
+                    </div>
+
+                </div>
+            </div>
+        </section>
 
 
+
+        <!-- NEW -->
         <section class="container" style="outline: 1px solid black; height: 200px;">
             <div class="section-narrow">
                 <div class="caption">
